# STORII

./: .env.example  .gitignore  Anchor.toml  Anchor.toml.bak  README.md  package-lock.json  package.json
app/: .env.local.bak  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: DotPattern.tsx  Navbar.tsx  OnChainRecord.tsx  RoundTimer.tsx  SealedParagraphCard.tsx  TypewriterText.tsx  VoteBar.tsx
app/src/context/: RoleContext.tsx
app/src/hooks/: usePiece.ts  useStorylock.ts  useVoting.ts
app/src/idl/: storylock.json
app/src/pages/: CreatorDashboard.tsx  CreatorRoundWatch.tsx  Explore.tsx  Landing.tsx  NewPiece.tsx  PieceView.tsx  RoleGate.tsx  RoundView.tsx
app/src/types/: index.ts
app/src/utils/: demo-data.ts  solana.ts
backend/: .env.bak  package.json
backend/src/: index.ts
backend/src/routes/: ai.ts  pieces.ts  rounds.ts  submissions.ts  subscribers.ts
backend/src/services/: chainReader.ts  content.ts  gemini.ts  pieceStore.ts  solana.ts  voteStore.ts
programs/storylock/: Cargo.toml
programs/storylock/src/: lib.rs
scripts/: localnet.sh
tests/: storylock.ts
