[package]
name = "storylock"
version = "0.1.0"
description = "Storylock — collaborative writing sealed on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "storylock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
